Resolves: tdf#116468 do not check array/matrix context for reportdesign

It doesn't have any, and worse, there's no currently active OpCode
symbol map that could be used to create strings from tokens.

Regression from

    commit bf1ffc64128f5b96d7c2fcc7adc81cbc25e232fd
    Date:   Sun Jul 16 15:18:09 2017 +0200

        FormulaDlg_Impl::UpdateValues: evaluate in force-array context if present

Change-Id: I77c2035fdd0926f67fcc85e7090f30485b4e312c
(cherry picked from commit 3a3a61bce913b564c7b7a98c56b55cbc11ea273a)
Reviewed-on: https://gerrit.libreoffice.org/51643
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>